[gd_scene load_steps=8 format=3 uid="uid://cit3b6knfwnmg"]

[ext_resource type="Script" path="res://scenes/trait_ui/trait_ui.gd" id="1_cu4u1"]
[ext_resource type="Texture2D" uid="uid://l1jq47dgo2n1" path="res://assets/sprites/trait_background.png" id="1_cufar"]
[ext_resource type="Resource" uid="uid://7nd3im3yj1q1" path="res://data/traits/elf.tres" id="2_26tpe"]
[ext_resource type="Texture2D" uid="uid://b1aup08or8bao" path="res://assets/sprites/traits/elf.png" id="2_qnrvv"]
[ext_resource type="FontFile" uid="uid://8di0jvr25vat" path="res://assets/font/m5x7.ttf" id="3_auqvv"]

[sub_resource type="LabelSettings" id="LabelSettings_muj5m"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.705882)

[sub_resource type="LabelSettings" id="LabelSettings_omwki"]
font = ExtResource("3_auqvv")
shadow_color = Color(0, 0, 0, 1)

[node name="TraitUI" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cu4u1")
trait_data = ExtResource("2_26tpe")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TraitIconBackground" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_cufar")
stretch_mode = 5

[node name="TraitIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/TraitIconBackground"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qnrvv")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="ActiveUnitLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_muj5m")
vertical_alignment = 2

[node name="TraitLevelLabels" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(28, 16)
layout_mode = 2
theme_override_colors/default_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_auqvv")
bbcode_enabled = true
text = "2/4/6"
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2

[node name="TraitLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ranger"
label_settings = SubResource("LabelSettings_omwki")
